src/objects/BT_CO_CMIS_POP_ImportPublicationInfo__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectiveDate__c</fullName>
        <label>effectiveDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiryDate__c</fullName>
        <label>expiryDate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>freePublicationIndicator__c</fullName>
        <label>freePublicationIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>frequencyCode__c</fullName>
        <label>frequencyCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>languageCode__c</fullName>
        <description>new field to hold language indicator</description>
        <label>languageCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>onlinePublicationIndicator__c</fullName>
        <label>onlinePublicationIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicHolidayWeekdayIndicator__c</fullName>
        <label>publicHolidayWeekdayIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicHolidayWeekendIndicator__c</fullName>
        <label>publicHolidayWeekendIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationCode__c</fullName>
        <label>publicationCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationName__c</fullName>
        <label>publicationName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publicationType__c</fullName>
        <label>publicationType</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publishedDays__c</fullName>
        <label>publishedDays</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publisherCode__c</fullName>
        <label>publisherCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sphPublicationIndicator__c</fullName>
        <label>sphPublicationIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMIS_POP_ImportPublicationInfo</label>
    <nameField>
        <label>BT_CO_CMIS_POP_ImportPublicationInfo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMIS_POP_ImportPublicationInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>